fix: spacing

--- a/src/assets/styles/base/index.css
+++ b/src/assets/styles/base/index.css
@@ -138,6 +138,10 @@ a {
     display: inline-flex;
     flex-direction: row;
     align-items: center;
+
+    & + .page-header {
+      margin-top: var(--sizing-base);
+    }
   }
 }
 
